# homework-11

./: .dockerignore  .evn.example  .gitignore  Dockerfile  README.md  compose.yaml  compose.yml  env.ps1  pyproject.toml  requirements.txt
data/: config.ini
src/homework-11/: main.py  schema.py
src/homework-11/database/: schema.py
src/homework-11/database/alembic/: env.py
src/homework-11/database/alembic/versions/: 33fcb659c7e9_add_disabled_to_users.py  4312ea33ffd6_add_user_roles.py  85815a1eec80_add_user_to_persons_relationship.py  c5a650ebbcba_add_user_roles.py  ca3c39708084_add_users.py  ceff926b3275_add_born_date_to_persons.py
src/homework-11/database/sql/postgresql/: functions.sql
src/homework-11/repositories/: auth.py  contact.py  contacts.py  person.py  persons.py  role.py  type.py  types.py
src/homework-11/routes/: auth.py  common.py  contact.py  contacts.py  person.py  persons.py  role.py  type.py  types.py  user.py
src/homework-11/services/: auth.py
src/pa_fastapi/: main.py  schema.py
src/pa_fastapi/database/: alembic.ini  connection.py  functions.py  migration.py  schema.py
src/pa_fastapi/database/alembic/: env.py
src/pa_fastapi/database/alembic/versions/: 1eb2f6c7f8dd_fix_contacts_unique.py  33fcb659c7e9_add_disabled_to_users.py  4312ea33ffd6_add_user_roles.py  4c048ca802f9_add_days_to_birthday_function.py  85815a1eec80_add_user_to_persons_relationship.py  b365249c2d45_init.py  c18d8d8167ae_add_users_reset_password_token.py  c5a650ebbcba_add_user_roles.py  ca3c39708084_add_users.py  f5887e80ac9d_add_email_confirmation.py
src/pa_fastapi/repositories/: auth.py  common.py  contact.py  person.py  persons.py  role.py  type.py  user.py
src/pa_fastapi/routes/: auth.py  common.py  contact.py  pa.py  person.py  persons.py  rates.py  role.py  type.py  user.py
src/pa_fastapi/services/: auth.py  email.py
src/pa_fastapi/services/templates/: reset_password.html
