[build-system]
requires = ["setuptools>=68.0", "setuptools_scm[toml]>=7.1.0"] #"poetry-core>=1.0.0"
build-backend = "setuptools.build_meta" #"poetry.core.masonry.api"

[project]
name = "pa_fastapi"
# version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="Volodymyr Zawatsky", email="volodymyr.zawatsky@gmail.com" },
]
description = "pa_fastapi"
readme = "README.md"
requires-python = "==3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "faker==19.4.0",
  "psycopg2-binary==2.9.8",
  "pydantic==2.3.0",
  "sqlalchemy==2.0.0",
  "alembic==1.12.0",
  "alembic-utils==0.8.1",
  "fastapi==0.103.1",
  "fastapi-jwt-auth==0.5.0",
  "fastapi-mail==1.4.1",
  "fastapi-limiter==0.1.5",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.6",
  "redis==4.6.0",
  "redis-lru==0.1.2",
  "uvicorn[standard]==0.23.2",
  # "cloudinary==1.35.0",
  # "registrator@git+https://www.github.com/madzwb/registrator@0.2.0",
]

# [project.scripts]
# main = "main:main"

# [project.entry-points]
# pa = {sorter = "filesorter.sorter"}


[project.urls]
"Homepage" = "https://github.com/madzwb-GoIT-Python-Web/pa_fastapi"
"Bug Tracker" = "https://github.com/madzwb-GoIT-Python-Web/pa_fastapi/issues"
"Repository" = "https://github.com/madzwb-GoIT-Python-Web/pa_fastapi"

# See https://github.com/pypa/setuptools_scm/blob/main/pyproject.toml
[tool.setuptools_scm]
# "calver-by-date" "guess-next-dev" "no-guess-dev" "post-release" "python-simplified-semver" "release-branch-semver"
version_scheme = "release-branch-semver"
# "dirty-tag" "node-and-date" "node-and-timestamp"
local_scheme =  "no-local-version"

[tool.setuptools]
# packages = "src"
include-package-data = true

# packages = ["filesorter"]

# [tool.setuptools.packages.find]
# where = ["data"]
